# weave-canvas

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  CHANGES.md  CLAUDE.md  eslint.config.js  index.html  overview.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.agents/skills/shadcn/: customization.md
.claude/: settings.json
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish.yml
src/: app.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  fs_utils.rs  lib.rs  main.rs  parser.rs  session.rs  watcher.rs
src-tauri/src/parser/: events.rs  jsonl.rs  mod.rs
src-tauri/src/projects/: commands.rs  mod.rs  repository.rs  types.rs
src-tauri/src/sessions/: commands.rs  mod.rs  repository.rs  types.rs
src/canvas/: canvas-node.ts  constants.ts  edge-renderer.ts  layout.test.ts  layout.ts  measure-node-height.test.ts  measure-node-height.ts  node-renderer.ts  scene-manager.test.ts  scene-manager.ts  shared-resources.ts  text-utils.test.ts  text-utils.ts  viewport.test.ts  viewport.ts
src/components/: canvas-area.test.tsx  canvas-area.tsx  pixi-canvas.tsx  side-panel.test.tsx  side-panel.tsx  status-bar.test.tsx  status-bar.tsx  toolbar.test.tsx  toolbar.tsx
src/components/ui/: button.tsx  card.tsx  (+3 more)
src/hooks/: use-pixi-app.ts  use-session-events.ts  use-session-selection.ts  use-sessions.ts  use-watcher-events.ts
src/lib/: ipc.ts
src/test/: utils.tsx
(+14 files in other folders)
